deploy: d3a38956b37bc4b1c41567bb1df485db2d9b7c90

--- a/serverlessworkflow/main/cloud/build-workflow-image-with-quarkus-cli.html
+++ b/serverlessworkflow/main/cloud/build-workflow-image-with-quarkus-cli.html
@@ -295,7 +295,7 @@
 <p>Ensure that the required dependencies are installed.</p>
 </li>
 <li>
-<p>Your Serverless Workflow application is ready in a container image. For more information about creating your Serverless Workflow application, see <a href="getting-started/create-your-first-workflow-service.adoc">Creating your first Serverless Workflow service</a>.</p>
+<p>Your Serverless Workflow application is ready to be built. For more information about creating your Serverless Workflow application, see <a href="../getting-started/create-your-first-workflow-service.html" class="xref page">Creating your first Serverless Workflow service</a>.</p>
 </li>
 <li>
 <p><a href="https://quarkus.io/guides/cli-tooling">Quarkus CLI</a> 2.9.1.Final is installed.</p>
@@ -307,7 +307,7 @@
 <p>Apache Maven 3.8.1+ or later is installed.</p>
 </li>
 <li>
-<p>Latest version of Docker is installed. Alternatively, you can use <a href="{google_jib_url}">Jib</a> to build container images. However, Docker is required to build GraalVM native image using the Quarkus native builder image.</p>
+<p>Latest version of Docker is installed. Alternatively, you can use <a href="https://github.com/GoogleContainerTools/jib">Jib</a> to build container images. However, Docker is required to build GraalVM native image using the Quarkus native builder image.</p>
 </li>
 <li>
 <p>Optionally, GraalVM 22.0.0.2 is installed.</p>
@@ -315,7 +315,7 @@
 </ul>
 </div>
 <div class="paragraph">
-<p>Quarkus provides a few extensions to build container images, such as <code>Jib</code>, <code>docker</code>, <code>s2i</code>, and <code>buildpacks</code>. For more information about the Quarkus extensions, see <a href="{quarkus_container_images_url}">Quarkus documentation</a>.</p>
+<p>Quarkus provides a few extensions to build container images, such as <code>Jib</code>, <code>docker</code>, <code>s2i</code>, and <code>buildpacks</code>. For more information about the Quarkus extensions, see the <a href="https://quarkus.io/guides/container-image">Quarkus documentation</a>.</p>
 </div>
 <div class="paragraph">
 <p>The examples in this document assume that you have the Quarkus tooling installed. For more information about the tooling, see <a href="../getting-started/getting-familiar-with-our-tooling.html" class="xref page">Using Serverless Workflow tooling</a>.</p>
@@ -326,7 +326,7 @@
 <h2 id="_using_a_kogito_example_application"><a class="anchor" href="#_using_a_kogito_example_application"></a>Using a Kogito example application</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>To get started with building Serverless Workflow images, you can use the <a href="{example_project_url}">serverless-workflow-greeting-quarkus</a> example application.</p>
+<p>To get started with building Serverless Workflow images, you can use the <a href="https://github.com/kiegroup/kogito-examples/tree/stable/kogito-quarkus-examples/serverless-workflow-greeting-quarkus">serverless-workflow-greeting-quarkus</a> example application.</p>
 </div>
 <div class="ulist">
 <div class="title">Prerequisites</div>
@@ -352,7 +352,7 @@ You can skip the following procedure, if you already have a Serverless Workflow 
 <div class="title">Procedure</div>
 <ol class="arabic">
 <li>
-<p>Clone the <a href="https://github.com/kiegroup/kogito-examples.git">kogito-examples</a> repository and navigate to the <a href="{example_project_url}">serverless-workflow-greeting-quarkus</a> example application.</p>
+<p>Clone the <a href="https://github.com/kiegroup/kogito-examples.git">kogito-examples</a> repository and navigate to the <a href="https://github.com/kiegroup/kogito-examples/tree/stable/kogito-quarkus-examples/serverless-workflow-greeting-quarkus">serverless-workflow-greeting-quarkus</a> example application.</p>
 <div class="listingblock">
 <div class="title">Clone a Kogito example application</div>
 <div class="content">
@@ -569,7 +569,7 @@ The added Jib extension caches the <code>target/lib</code> directory. Based on t
 </table>
 </div>
 <div class="paragraph">
-<p>For more information about native builds, see the Quarkus documentation of <a href="{quarkus_native_builds_url}">Building a native executable</a>.</p>
+<p>For more information about native builds, see the Quarkus documentation of <a href="https://quarkus.io/guides/building-native-image">Building a native executable</a>.</p>
 </div>
 </div>
 </div>
