--- a/serverlessworkflow/main/core/defining-an-input-schema-for-workflows.html
+++ b/serverlessworkflow/main/core/defining-an-input-schema-for-workflows.html
@@ -75,6 +75,9 @@
     <span class="nav-text">Core</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="understanding-jq-expressions.html">Understanding JQ expressions</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="understanding-workflow-error-handling.html">Error handling in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
