--- a/serverlessworkflow/main/core/understanding-workflow-error-handling.html
+++ b/serverlessworkflow/main/core/understanding-workflow-error-handling.html
@@ -76,6 +76,9 @@
     <button class="nav-item-toggle"></button>
     <span class="nav-text">Core</span>
 <ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="understanding-jq-expressions.html">Understanding JQ expressions</a>
+  </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="understanding-workflow-error-handling.html">Error handling in Serverless Workflow</a>
   </li>
