--- a/serverlessworkflow/main/service-orchestration/orchestration-of-openapi-based-services.html
+++ b/serverlessworkflow/main/service-orchestration/orchestration-of-openapi-based-services.html
@@ -77,6 +77,9 @@
     <span class="nav-text">Core</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../core/understanding-jq-expressions.html">Understanding JQ expressions</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../core/understanding-workflow-error-handling.html">Error handling in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
