--- a/serverlessworkflow/main/core/understanding-workflow-error-handling.html
+++ b/serverlessworkflow/main/core/understanding-workflow-error-handling.html
@@ -77,7 +77,7 @@
     <span class="nav-text">Core</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="understanding-jq-expressions.html">Understanding JQ expressions</a>
+    <a class="nav-link" href="understanding-jq-expressions.html">jq expressions in Serverless Workflow</a>
   </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="understanding-workflow-error-handling.html">Error handling in Serverless Workflow</a>
@@ -153,6 +153,9 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../cloud/build-workflow-image-with-quarkus-cli.html">Building Serverless Workflow Images using Quarkus CLI</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../cloud/deploying-on-minikube.html">Deploying your Serverless Workflow application on Minikube</a>
   </li>
 </ul>
   </li>
@@ -242,7 +245,7 @@
 <div class="title">Figure 1. Example of error handling</div>
 </div>
 <div class="paragraph">
-<p>The workflow accepts an integer number as the input model. When the workflow starts, it invokes the <a href="https://github.com/kiegroup/kogito-examples/tree/main/serverless-workflow-examplesserverless-workflow-error-quarkus/src/main/java/org/kie/kogito/examples/EvenService.java"><code>isEven</code> Java service</a>, which accepts that integer number as a parameter. This service throws an <code>IllegalArgumentException</code> exception if the integer number is odd. This means that if the integer number is even, the Serverless Workflow transitions to the <code>even</code> state, however, if the integer number is odd, the Serverless Workflow transitions to the <code>odd</code> state, resulting in a different model output.</p>
+<p>The workflow accepts an integer number as the input model. When the workflow starts, it invokes the <a href="https://github.com/kiegroup/kogito-examples/tree/main/serverless-workflow-examples/serverless-workflow-error-quarkus/src/main/java/org/kie/kogito/examples/EvenService.java"><code>isEven</code> Java service</a>, which accepts that integer number as a parameter. This service throws an <code>IllegalArgumentException</code> exception if the integer number is odd. This means that if the integer number is even, the Serverless Workflow transitions to the <code>even</code> state, however, if the integer number is odd, the Serverless Workflow transitions to the <code>odd</code> state, resulting in a different model output.</p>
 </div>
 <div class="listingblock">
 <div class="title">Example <code>checkEven</code> state</div>
