--- a/serverlessworkflow/main/tooling/quarkus-dev-ui-extension/quarkus-dev-ui-workflow-definition-page.html
+++ b/serverlessworkflow/main/tooling/quarkus-dev-ui-extension/quarkus-dev-ui-workflow-definition-page.html
@@ -77,7 +77,7 @@
     <span class="nav-text">Core</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../../core/understanding-jq-expressions.html">Understanding JQ expressions</a>
+    <a class="nav-link" href="../../core/understanding-jq-expressions.html">jq expressions in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../../core/understanding-workflow-error-handling.html">Error handling in Serverless Workflow</a>
@@ -153,6 +153,9 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../../cloud/build-workflow-image-with-quarkus-cli.html">Building Serverless Workflow Images using Quarkus CLI</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../../cloud/deploying-on-minikube.html">Deploying your Serverless Workflow application on Minikube</a>
   </li>
 </ul>
   </li>
