deploy: 5938d47e00e15637cb6ae767c88cdaed53e4c504

--- a/serverlessworkflow/main/cloud/build-workflow-image-with-quarkus-cli.html
+++ b/serverlessworkflow/main/cloud/build-workflow-image-with-quarkus-cli.html
@@ -115,6 +115,9 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../tooling/kn-plugin-workflow-overview.html">Workflow plugin for Knative CLI</a>
+  </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
