--- a/serverlessworkflow/main/getting-started/create-your-first-workflow-service.html
+++ b/serverlessworkflow/main/getting-started/create-your-first-workflow-service.html
@@ -113,6 +113,9 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../tooling/kn-plugin-workflow-overview.html">Workflow plugin for Knative CLI</a>
+  </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
@@ -253,7 +256,7 @@
 <p>Maven 3.8.1</p>
 </li>
 <li>
-<p><a href="https://quarkus.io/guides/cli-tooling">Quarkus CLI</a> 2.10.2.Final</p>
+<p><a href="https://quarkus.io/guides/cli-tooling">Quarkus CLI</a> 2.10.2.Final or <a href="../tooling/kn-plugin-workflow-overview.html" class="xref page">Knative CLI</a> 0.0.0</p>
 </li>
 <li>
 <p>Visual Studio Code with <a href="https://marketplace.visualstudio.com/items?itemName=redhat.java">Red Hat Java Extension</a>
@@ -276,9 +279,23 @@ and <a href="https://marketplace.visualstudio.com/items?itemName=redhat.vscode-e
 <div class="title">Procedure</div>
 <ol class="arabic">
 <li>
-<p>In a command terminal, enter the following command to create a project:</p>
-<div class="openblock">
+<p>In a command terminal, use one of the below mentioned command to create a project:</p>
+<div class="tabset is-loading">
+<div class="ulist tabs">
+<ul>
+<li>
+<p><a id="tabset1_quarkus-cli"></a>Quarkus CLI</p>
+</li>
+<li>
+<p><a id="tabset1_maven"></a>Maven</p>
+</li>
+<li>
+<p><a id="tabset1_knative-cli"></a>Knative CLI</p>
+</li>
+</ul>
+</div>
 <div class="content">
+<div class="tab-pane" aria-labelledby="tabset1_quarkus-cli">
 <div class="listingblock">
 <div class="title">Create a project using Quarkus CLI</div>
 <div class="content">
@@ -312,6 +329,8 @@ and <a href="https://marketplace.visualstudio.com/items?itemName=redhat.vscode-e
 <div class="paragraph">
 <p>The SwaggerUI is available at <code><a href="http://localhost:8080/q/swagger-ui/" class="bare">http://localhost:8080/q/swagger-ui/</a></code> when you run the application.</p>
 </div>
+</div>
+<div class="tab-pane" aria-labelledby="tabset1_maven">
 <div class="listingblock">
 <div class="title">Create a project using Maven</div>
 <div class="content">
@@ -326,22 +345,62 @@ cd serverless-workflow-hello-world</code></pre>
 <p>In the previous command, <code>org.kie.kogito.examples</code>, <code>serverless-workflow-hello-world</code>, and <code>1.0</code> is group id, artifact id, and version of your project respectively.</p>
 </div>
 </div>
+<div class="tab-pane" aria-labelledby="tabset1_knative-cli">
+<div class="listingblock">
+<div class="title">Create a project using Knative CLI</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">kn workflow create --name my-project --extension quarkus-jsonp,quarkus-smallrye-openapi</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Follow this <a href="../tooling/kn-plugin-workflow-overview.html" class="xref page">guide</a> to know more information on Knative CLI.</p>
+</div>
+</div>
+</div>
 </div>
 </li>
 <li>
 <p>To verify that project is created, compile the project using the following command:</p>
-<div class="openblock">
+<div class="tabset is-loading">
+<div class="ulist tabs">
+<ul>
+<li>
+<p><a id="tabset2_quarkus-cli"></a>Quarkus CLI</p>
+</li>
+<li>
+<p><a id="tabset2_maven"></a>Maven</p>
+</li>
+<li>
+<p><a id="tabset2_knative-cli"></a>Knative CLI</p>
+</li>
+</ul>
+</div>
 <div class="content">
+<div class="tab-pane" aria-labelledby="tabset2_quarkus-cli">
 <div class="listingblock">
 <div class="title">Compile your project using Quarkus CLI</div>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">quarkus build</code></pre>
 </div>
 </div>
+</div>
+<div class="tab-pane" aria-labelledby="tabset2_maven">
 <div class="listingblock">
 <div class="title">Compile your project using Maven</div>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">mvn clean package</code></pre>
+</div>
+</div>
+</div>
+<div class="tab-pane" aria-labelledby="tabset2_knative-cli">
+<div class="listingblock">
+<div class="title">Builds the project and generates a local image called "quay.io/other-user/my-project:1.0.1"</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">kn workflow build --image my-user/my-project:1.0.0 --image-repository other-user --image-tag 1.0.1</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Follow this <a href="../tooling/kn-plugin-workflow-overview.html" class="xref page">guide</a> to know more information on Knative CLI.</p>
 </div>
 </div>
 </div>
@@ -477,18 +536,48 @@ unique identifier.</td>
 <ol class="arabic">
 <li>
 <p>Enter the following command to run your Serverless Workflow application:</p>
-<div class="openblock">
+<div class="tabset is-loading">
+<div class="ulist tabs">
+<ul>
+<li>
+<p><a id="tabset3_quarkus-cli"></a>Quarkus CLI</p>
+</li>
+<li>
+<p><a id="tabset3_maven"></a>Maven</p>
+</li>
+<li>
+<p><a id="tabset3_knative-cli"></a>Knative CLI</p>
+</li>
+</ul>
+</div>
 <div class="content">
+<div class="tab-pane" aria-labelledby="tabset3_quarkus-cli">
 <div class="listingblock">
 <div class="title">Run your Serverless Workflow application using Quarkus CLI</div>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">quarkus dev</code></pre>
 </div>
 </div>
+</div>
+<div class="tab-pane" aria-labelledby="tabset3_maven">
 <div class="listingblock">
 <div class="title">Run your Serverless Workflow application using Maven</div>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">mvn clean quarkus:dev</code></pre>
+</div>
+</div>
+</div>
+<div class="tab-pane" aria-labelledby="tabset3_knative-cli">
+<div class="listingblock">
+<div class="title">Deploys the project to authenticated cluster</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">kn workflow deploy</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Follow this <a href="../tooling/kn-plugin-workflow-overview.html" class="xref page">guide</a> to know more information on Knative CLI.</p>
+</div>
+</div>
 </div>
 </div>
 <div class="listingblock">
@@ -528,8 +617,6 @@ __  ____  __  _____   ___  __ ____  ______
 2022-05-25 14:38:13,378 INFO  [org.kie.kog.qua.pro.dev.DataIndexInMemoryContainer] (docker-java-stream--938264210) STDOUT: 2022-05-25 17:38:13,181 INFO  [io.quarkus] (main) data-index-service-inmemory 1.22.0.Final on JVM (powered by Quarkus 2.9.0.Final) started in 4.691s. Listening on: http://0.0.0.0:8080
 2022-05-25 14:38:13,379 INFO  [org.kie.kog.qua.pro.dev.DataIndexInMemoryContainer] (docker-java-stream--938264210) STDOUT: 2022-05-25 17:38:13,182 INFO  [io.quarkus] (main) Profile prod activated.
 2022-05-25 14:38:13,380 INFO  [org.kie.kog.qua.pro.dev.DataIndexInMemoryContainer] (docker-java-stream--938264210) STDOUT: 2022-05-25 17:38:13,182 INFO  [io.quarkus] (main) Installed features: [agroal, cdi, hibernate-orm, hibernate-orm-panache, inmemory-postgres, jdbc-postgresql, narayana-jta, oidc, reactive-routes, rest-client-reactive, rest-client-reactive-jackson, security, smallrye-context-propagation, smallrye-graphql-client, smallrye-health, smallrye-metrics, smallrye-reactive-messaging, smallrye-reactive-messaging-http, vertx, vertx-graphql]</code></pre>
-</div>
-</div>
 </div>
 </div>
 </li>
