--- a/serverlessworkflow/main/tooling/tooling.html
+++ b/serverlessworkflow/main/tooling/tooling.html
@@ -113,6 +113,9 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="kn-plugin-workflow-overview.html">Workflow plugin for Knative CLI</a>
+  </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
