--- a/serverlessworkflow/main/getting-started/getting-familiar-with-our-tooling.html
+++ b/serverlessworkflow/main/getting-started/getting-familiar-with-our-tooling.html
@@ -63,7 +63,7 @@
     <span class="nav-text">Getting Started</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="create-your-first-workflow-service.html">Create your first workflow service</a>
+    <a class="nav-link" href="create-your-first-workflow-service.html">Creating your first Serverless Workflow service</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="cncf-serverless-workflow-specification-support.html">CNCF Serverless Workflow specification</a>
@@ -114,7 +114,7 @@
 </ul>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../tooling/kn-plugin-workflow-overview.html">Workflow plugin for Knative CLI</a>
+    <a class="nav-link" href="../tooling/kn-plugin-workflow-overview.html">Serverless Workflow plug-in for Knative CLI</a>
   </li>
 </ul>
   </li>
@@ -144,7 +144,7 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI Services with Wiremock</a>
+    <a class="nav-link" href="../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
