--- a/serverlessworkflow/main/index.html
+++ b/serverlessworkflow/main/index.html
@@ -64,7 +64,7 @@
     <span class="nav-text">Getting Started</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="getting-started/create-your-first-workflow-service.html">Create your first workflow service</a>
+    <a class="nav-link" href="getting-started/create-your-first-workflow-service.html">Creating your first Serverless Workflow service</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="getting-started/cncf-serverless-workflow-specification-support.html">CNCF Serverless Workflow specification</a>
@@ -115,7 +115,7 @@
 </ul>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="tooling/kn-plugin-workflow-overview.html">Workflow plugin for Knative CLI</a>
+    <a class="nav-link" href="tooling/kn-plugin-workflow-overview.html">Serverless Workflow plug-in for Knative CLI</a>
   </li>
 </ul>
   </li>
@@ -145,7 +145,7 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI Services with Wiremock</a>
+    <a class="nav-link" href="testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
