deploy: 631a50caf18c0cf2d7651cefbf11726ac5f62984

--- a/serverlessworkflow/main/cloud/build-workflow-images-with-kn-cli.html
+++ b/serverlessworkflow/main/cloud/build-workflow-images-with-kn-cli.html
@@ -163,6 +163,15 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">Integrations</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../integrations/serverless-dashboard-with-runtime-data.html">Displaying workflow runtime data in serverless dashboards</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </li>
 </ul>
