deploy: 9e16c926ff392f42c91120841b46f81e1f37dc39

--- a/serverlessworkflow/main/index.html
+++ b/serverlessworkflow/main/index.html
@@ -185,6 +185,15 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">Use Cases</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="use-cases/orchestration-based-saga-pattern.html">Orchestration-based SAGA pattern</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </li>
 </ul>
