deploy: ae51a9cc0bb5bc2a4eee5cd736f8f7e0c531104e

--- a/serverlessworkflow/main/core/understanding-jq-expressions.html
+++ b/serverlessworkflow/main/core/understanding-jq-expressions.html
@@ -158,7 +158,10 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="../testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink with WireMock</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
@@ -297,7 +300,7 @@
 </td>
 <td class="content">
 <div class="paragraph">
-<p>The Serverless Workflow Specification requires all the expressions to be embedded within <code>${… }</code>. However, Kogito Serverless Workflow figures out whether or not a string is an expression. Therefore, you can save characters and skip <code>${</code> in the beginning and <code>}</code> in the end. In case of portablity, you must embed the expressions within <code>${… }</code>.</p>
+<p>The Serverless Workflow Specification requires all the expressions to be embedded within <code>${… }</code>. However, Kogito Serverless Workflow figures out whether or not a string is an expression. Therefore, you can save characters and skip <code>${</code> in the beginning and <code>}</code> in the end. In case of portability, you must embed the expressions within <code>${… }</code>.</p>
 </div>
 </td>
 </tr>
