--- a/serverlessworkflow/main/tooling/serverless-workflow-editor/swf-editor-chrome-extension.html
+++ b/serverlessworkflow/main/tooling/serverless-workflow-editor/swf-editor-chrome-extension.html
@@ -158,7 +158,10 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="../../testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink with WireMock</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
@@ -253,7 +256,7 @@
 <h2 id="proc-install-chrome-extension-sw-editor"><a class="anchor" href="#proc-install-chrome-extension-sw-editor"></a>Installing the Chrome GitHub extension for Serverless Workflow editor</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>You can install the Chrome extension for the Serverless Workflow editor to view and edit the workflow specification fles in GitHub.</p>
+<p>You can install the Chrome extension for the Serverless Workflow editor to view and edit the workflow specification files in GitHub.</p>
 </div>
 <div class="ulist">
 <div class="title">Prerequisites</div>
