--- a/serverlessworkflow/main/core/understanding-workflow-error-handling.html
+++ b/serverlessworkflow/main/core/understanding-workflow-error-handling.html
@@ -158,7 +158,10 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="../testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink with WireMock</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
@@ -324,7 +327,7 @@
 </div>
 </div>
 <div class="paragraph">
-<p>To handle the error, the worflow defines an <code>odd number</code> error which handles any runtime exception. As the <code>IllegalArgumentException</code> is a child of <code>RuntimeException</code>, if <code>isEven</code> method throws the exception, it will be handled.</p>
+<p>To handle the error, the workflow defines an <code>odd number</code> error which handles any runtime exception. As the <code>IllegalArgumentException</code> is a child of <code>RuntimeException</code>, if <code>isEven</code> method throws the exception, it will be handled.</p>
 </div>
 <div class="listingblock">
 <div class="title">Example error definition</div>
