--- a/serverlessworkflow/main/getting-started/cncf-serverless-workflow-specification-support.html
+++ b/serverlessworkflow/main/getting-started/cncf-serverless-workflow-specification-support.html
@@ -158,7 +158,10 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="../testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink with WireMock</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
@@ -346,7 +349,7 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#workflow-timeouts">Workflow Timeouts</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="#compensation">Compensantion</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="#compensation">Compensation</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><img class="emoji" draggable="false" height="24px" width="24px" src="https://twemoji.maxcdn.com/2/svg/1f315.svg" /></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#Workflow-Compensation">Workflow Compensation</a></p></td>
 </tr>
@@ -368,7 +371,7 @@
 <h2 id="states"><a class="anchor" href="#states"></a>States</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The <a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#parallel-state">Parallel State</a> of the workflow states feature works in a single thread. This means that a Parallel State does not create one thread per branch, simulating an actual paraller behavior.</p>
+<p>The <a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#parallel-state">Parallel State</a> of the workflow states feature works in a single thread. This means that a Parallel State does not create one thread per branch, simulating an actual parallel behavior.</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -518,7 +521,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p><code>resultEventRef</code> property in <a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#eventref-definition"><code>EventRefDefintion</code></a> is not implemented and, if specified, this property is ignored. Same functionality can be achieved by using <a href="../eventing/working-with-callbacks.html" class="xref page">Callback</a> state.</p>
+<p><code>resultEventRef</code> property in <a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#eventref-definition"><code>EventRefDefinition</code></a> is not implemented and, if specified, this property is ignored. Same functionality can be achieved by using <a href="../eventing/working-with-callbacks.html" class="xref page">Callback</a> state.</p>
 </li>
 <li>
 <p><a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#correlation-definition">Correlation</a> has limited support. see <a href="../eventing/event-correlation-with-workflows.html" class="xref page">Event correlation with Serverless Workflows</a>.</p>
@@ -606,7 +609,7 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="compensation"><a class="anchor" href="#compensation"></a>Compensantion</h2>
+<h2 id="compensation"><a class="anchor" href="#compensation"></a>Compensation</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Kogito supports workflow compensation as described in the <a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#Workflow-Compensation">Serverless Workflow specification definition</a>.</p>
