--- a/serverlessworkflow/main/service-orchestration/orchestration-of-openapi-based-services.html
+++ b/serverlessworkflow/main/service-orchestration/orchestration-of-openapi-based-services.html
@@ -158,7 +158,10 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="../testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink with WireMock</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
@@ -245,20 +248,20 @@
 </div>
 <div class="paragraph">
 <div class="title">Prerequisites</div>
-<p>The examples in this document assumes that you have following prerequisites:</p>
+<p>The examples in this document assumes that you have the following prerequisites:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>You have installed the Kogito tooling.</p>
+<p>A Serverless Workflow project is created.</p>
 <div class="paragraph">
-<p>For more information about the tooling, see <a href="../getting-started/getting-familiar-with-our-tooling.html" class="xref page">Using Serverless Workflow tooling</a>.</p>
+<p>For more information about creating a workflow project, see <a href="../getting-started/create-your-first-workflow-service.html" class="xref page">Creating your first Serverless Workflow service</a>.</p>
 </div>
 </li>
 <li>
-<p>You have created a Serverless Workflow project.</p>
+<p>You have installed the Kogito tooling.</p>
 <div class="paragraph">
-<p>For more information about creating a Serverless Workflow project, see <a href="../getting-started/create-your-first-workflow-service.html" class="xref page">Creating your first Serverless Workflow service</a>.</p>
+<p>For more information about the tooling, see <a href="../getting-started/getting-familiar-with-our-tooling.html" class="xref page">Using Serverless Workflow tooling</a>.</p>
 </div>
 </li>
 </ul>
@@ -292,7 +295,7 @@
 </td>
 <td class="content">
 <div class="paragraph">
-<p>In the previous example function definition, the <code>type</code> attribute can be ommited as the <a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#Function-Definition">default value</a> is <code>rest</code>.</p>
+<p>In the previous example function definition, the <code>type</code> attribute can be omitted as the <a href="https://github.com/serverlessworkflow/specification/blob/0.8.x/specification.md#Function-Definition">default value</a> is <code>rest</code>.</p>
 </div>
 </td>
 </tr>
