--- a/serverlessworkflow/main/testing-and-troubleshooting/basic-integration-tests-with-restassured.html
+++ b/serverlessworkflow/main/testing-and-troubleshooting/basic-integration-tests-with-restassured.html
@@ -158,7 +158,10 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink with WireMock</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
@@ -274,34 +277,29 @@
 </div>
 </div>
 <div class="ulist">
-<div class="title">Prerequites</div>
+<div class="title">Prerequisites</div>
 <ul>
 <li>
-<p>You have cloned the <code>serverless-workflow-testing-with-rest-assured</code> example application from the <a href="https://github.com/kiegroup/kogito-examples.git">GitHub repository</a>.</p>
-</li>
-<li>
-<p>The <code>pom.xml</code> file contains the required dependencies:</p>
-<div class="openblock">
-<div class="content">
-<div class="listingblock">
-<div class="title">Dependencies in <code>pom.xml</code> file</div>
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;dependency&gt;
-    &lt;groupId&gt;io.quarkus&lt;/groupId&gt;
-    &lt;artifactId&gt;quarkus-junit5&lt;/artifactId&gt;
-    &lt;scope&gt;test&lt;/scope&gt;
-&lt;/dependency&gt;
-&lt;dependency&gt;
-    &lt;groupId&gt;io.rest-assured&lt;/groupId&gt;
-    &lt;artifactId&gt;rest-assured&lt;/artifactId&gt;
-    &lt;scope&gt;test&lt;/scope&gt;
-&lt;/dependency&gt;</code></pre>
-</div>
-</div>
-</div>
+<p>A Serverless Workflow project is created.</p>
+<div class="paragraph">
+<p>For more information about creating a workflow project, see <a href="#getting-started/create-your-first-workflow-service.adoc">Creating your first Serverless Workflow service</a>.</p>
 </div>
 </li>
 </ul>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>This document is based on the <code>serverless-workflow-testing-with-rest-assured</code> example application from the <a href="https://github.com/kiegroup/kogito-examples.git">GitHub repository</a>.</p>
+</div>
+</td>
+</tr>
+</table>
 </div>
 <div class="olist arabic">
 <div class="title">Procedure</div>
@@ -446,7 +444,7 @@ class HelloTest {
 <div class="ulist">
 <ul>
 <li>
-<p><a href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a></p>
+<p><a href="#testing-and-troubleshooting/mocking-openapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a></p>
 </li>
 <li>
 <p><a href="#testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.adoc">Mocking HTTP CloudEvents using WireMock</a></p>
