--- a/serverlessworkflow/main/tooling/kn-plugin-workflow-overview.html
+++ b/serverlessworkflow/main/tooling/kn-plugin-workflow-overview.html
@@ -156,7 +156,10 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="../testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink with WireMock</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
@@ -361,7 +364,7 @@ Use "kn workflow [command] --help" for more information about a command.</code><
 </div>
 </div>
 <div class="sect1">
-<h2 id="proc-create-sw-project-kn-cli"><a class="anchor" href="#proc-create-sw-project-kn-cli"></a>Creating a Serverless Wokflow project using Knative CLI</h2>
+<h2 id="proc-create-sw-project-kn-cli"><a class="anchor" href="#proc-create-sw-project-kn-cli"></a>Creating a Serverless Workflow project using Knative CLI</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>After installing the Serverless Workflow plug-in, you can use the <code>create</code> command with <code>kn workflow</code> to scaffold a new Serverless Workflow project in your current directory.</p>
@@ -460,7 +463,7 @@ Use "kn workflow [command] --help" for more information about a command.</code><
 <li>
 <p>Serverless Workflow project is created.</p>
 <div class="paragraph">
-<p>For more information about created a workflow project, see <a href="#proc-create-sw-project-kn-cli">Creating Serverless Wokflow project using Knative CLI</a>.</p>
+<p>For more information about created a workflow project, see <a href="#proc-create-sw-project-kn-cli">Creating Serverless Workflow project using Knative CLI</a>.</p>
 </div>
 </li>
 </ul>
@@ -552,7 +555,7 @@ kn workflow build --image-name my-project</code></pre>
 </ol>
 </div>
 <div class="sect2">
-<h3 id="con-build-strategy-kn-cli"><a class="anchor" href="#con-build-strategy-kn-cli"></a>Strategy for building a Severless Worlflow project</h3>
+<h3 id="con-build-strategy-kn-cli"><a class="anchor" href="#con-build-strategy-kn-cli"></a>Strategy for building a Serverless Workflow project</h3>
 <div class="paragraph">
 <p>You can use the following strategies to build a Serverless Workflow project and to generate the container image:</p>
 </div>
@@ -637,7 +640,7 @@ kn workflow build --image-name my-project</code></pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="proc-deploy-sw-project-kn-cli"><a class="anchor" href="#proc-deploy-sw-project-kn-cli"></a>Deploying a Serverless Wokflow project using Knative CLI</h2>
+<h2 id="proc-deploy-sw-project-kn-cli"><a class="anchor" href="#proc-deploy-sw-project-kn-cli"></a>Deploying a Serverless Workflow project using Knative CLI</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>You can use the <code>deploy</code> command combined with <code>kn workflow</code> to deploy your Serverless Workflow project in your current directory. However, before deploying the project, you must build your Serverless Workflow project as the build process produces deployment files, such as <code>knative.yml</code> and <code>kogito.yml</code> (In case of events) in the <code>./target/kubernetes</code> folder.</p>
@@ -654,11 +657,11 @@ kn workflow build --image-name my-project</code></pre>
 <li>
 <p>Serverless Workflow project is created.</p>
 <div class="paragraph">
-<p>For more information about created a workflow project, see <a href="#proc-create-sw-project-kn-cli">Creating Serverless Wokflow project using Knative CLI</a>.</p>
+<p>For more information about created a workflow project, see <a href="#proc-create-sw-project-kn-cli">Creating Serverless Workflow project using Knative CLI</a>.</p>
 </div>
 </li>
 <li>
-<p>Serverlesss Workflow project is built.</p>
+<p>Serverless Workflow project is built.</p>
 <div class="paragraph">
 <p>For more information about building your workflow project, see <a href="#proc-build-sw-project-kn-cli">Building Serverless Workflow project using Knative CLI</a>.</p>
 </div>
@@ -721,7 +724,10 @@ kn workflow build --image-name my-project</code></pre>
 <div class="title">Prerequisites</div>
 <ul>
 <li>
-<p>Serverless Workflow project is created.</p>
+<p>A Serverless Workflow project is created.</p>
+<div class="paragraph">
+<p>For more information about creating a workflow project, see <a href="../getting-started/create-your-first-workflow-service.html" class="xref page">Creating your first Serverless Workflow service</a>.</p>
+</div>
 </li>
 </ul>
 </div>
