--- a/serverlessworkflow/main/tooling/serverless-workflow-editor/swf-editor-vscode-extension.html
+++ b/serverlessworkflow/main/tooling/serverless-workflow-editor/swf-editor-vscode-extension.html
@@ -158,7 +158,10 @@
     <span class="nav-text">Testing and Troubleshooting</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../../testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="../../testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink with WireMock</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
@@ -245,7 +248,7 @@
 <p>The VS Code extension for the Serverless Workflow editor enables you to view and edit <a href="https://serverlessworkflow.io/">CNCF Serverless Workflow specification</a> files in your local projects.</p>
 </div>
 <div class="paragraph">
-<p>This document describes how to install and use the VS Code extension for Serverless Worklfow editor, along with how to load OpenAPI files using the extension.</p>
+<p>This document describes how to install and use the VS Code extension for Serverless Workflow editor, along with how to load OpenAPI files using the extension.</p>
 </div>
 </div>
 </div>
