--- a/serverlessworkflow/main/index.html
+++ b/serverlessworkflow/main/index.html
@@ -139,7 +139,7 @@
     <span class="nav-text">Eventing</span>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="eventing/consume-producing-events-with-kafka.html">Consuming and producing events with Kafka</a>
+    <a class="nav-link" href="eventing/consume-producing-events-with-kafka.html">Consuming and producing events using Apache Kafka</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="eventing/working-with-callbacks.html">Callbacks in Serverless Workflow</a>
@@ -380,7 +380,7 @@
 <div class="openblock card">
 <div class="content">
 <div class="paragraph card-title">
-<p><a href="eventing/working-with-callbacks.html" class="xref page">Working with Callbacks</a></p>
+<p><a href="eventing/working-with-callbacks.html" class="xref page">Callbacks in Serverless Workflow</a></p>
 </div>
 <div class="paragraph card-description">
 <p>Learn how to use the Callback state in your Serverless Workflow application</p>
@@ -390,10 +390,10 @@
 <div class="openblock card">
 <div class="content">
 <div class="paragraph card-title">
-<p><a href="eventing/consume-producing-events-with-kafka.html" class="xref page">Consuming and producing events with Kafka</a></p>
+<p><a href="eventing/consume-producing-events-with-kafka.html" class="xref page">Consuming and producing events using Apache Kafka</a></p>
 </div>
 <div class="paragraph card-description">
-<p>Learn how to configure your Serverless Workflow application to produce and consume events using Kafka</p>
+<p>Learn how to configure your Serverless Workflow application to produce and consume events using Apache Kafka</p>
 </div>
 </div>
 </div>
