--- a/serverlessworkflow/main/core/understanding-jq-expressions.html
+++ b/serverlessworkflow/main/core/understanding-jq-expressions.html
@@ -172,6 +172,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../testing-and-troubleshooting/integration-tests-with-postgresql.html">Integration Test with PostgreSQL</a>
+  </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
