--- a/serverlessworkflow/main/testing-and-troubleshooting/development-tools-for-troubleshooting.html
+++ b/serverlessworkflow/main/testing-and-troubleshooting/development-tools-for-troubleshooting.html
@@ -170,6 +170,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="integration-tests-with-postgresql.html">Integration Test with PostgreSQL</a>
+  </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
