--- a/serverlessworkflow/main/index.html
+++ b/serverlessworkflow/main/index.html
@@ -166,13 +166,22 @@
     <a class="nav-link" href="testing-and-troubleshooting/mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="testing-and-troubleshooting/mocking-openapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="testing-and-troubleshooting/basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="testing-and-troubleshooting/integration-tests-with-postgresql.html">Integration Test with PostgreSQL</a>
+    <a class="nav-link" href="testing-and-troubleshooting/integration-tests-with-postgresql.html">Serverless Workflow integration test using PostgreSQL</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">Persistence</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="persistence/persistence-with-postgresql.html">Running Serverless Workflow service using PostgresSQL</a>
   </li>
 </ul>
   </li>
@@ -443,7 +452,7 @@
 <div class="openblock card">
 <div class="content">
 <div class="paragraph card-title">
-<p><a href="testing-and-troubleshooting/integration-tests-with-postgresql.html" class="xref page">Integration Test with PostgreSQL</a></p>
+<p><a href="testing-and-troubleshooting/integration-tests-with-postgresql.html" class="xref page">Serverless Workflow integration test using PostgreSQL</a></p>
 </div>
 <div class="paragraph card-description">
 <p>Learn how to integrate tests on Serverless Workflow applications that use PostgreSQL as a persistence storage</p>
@@ -467,6 +476,21 @@
 </div>
 <div class="paragraph card-description">
 <p>Testing Serverless Workflow application that uses HTTP CloudEvents and Knative Sink Binding</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1 card-section">
+<h2 id="_persistence"><a class="anchor" href="#_persistence"></a>Persistence</h2>
+<div class="sectionbody">
+<div class="openblock card">
+<div class="content">
+<div class="paragraph card-title">
+<p><a href="persistence/persistence-with-postgresql.html" class="xref page">Running Serverless Workflow service using PostgresSQL</a></p>
+</div>
+<div class="paragraph card-description">
+<p>Running Serverless Workflow service using PostgresSQL</p>
 </div>
 </div>
 </div>
