--- a/serverlessworkflow/main/testing-and-troubleshooting/basic-integration-tests-with-restassured.html
+++ b/serverlessworkflow/main/testing-and-troubleshooting/basic-integration-tests-with-restassured.html
@@ -167,13 +167,22 @@
     <a class="nav-link" href="mocking-http-cloudevents-with-wiremock.html">Mocking HTTP CloudEvents sink using WireMock</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="#testing-and-troubleshooting/mocking-opnapi-services-with-wiremock.adoc">Mocking OpenAPI services using WireMock</a>
+    <a class="nav-link" href="mocking-openapi-services-with-wiremock.html">Mocking OpenAPI services using WireMock</a>
   </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="basic-integration-tests-with-restassured.html">Testing your Serverless Workflow application using REST Assured</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="integration-tests-with-postgresql.html">Integration Test with PostgreSQL</a>
+    <a class="nav-link" href="integration-tests-with-postgresql.html">Serverless Workflow integration test using PostgreSQL</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">Persistence</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../persistence/persistence-with-postgresql.html">Running Serverless Workflow service using PostgresSQL</a>
   </li>
 </ul>
   </li>
