deploy: f7fc52a9e6de8c8e23ded17bb06b35646a441cd0

--- a/serverlessworkflow/main/core/accessing-workflow-metainformation-in-runtime.html
+++ b/serverlessworkflow/main/core/accessing-workflow-metainformation-in-runtime.html
@@ -86,6 +86,9 @@
     <a class="nav-link" href="working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="configuration-properties.html">Configuration Properties</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
   </li>
 </ul>
