--- a/serverlessworkflow/main/index.html
+++ b/serverlessworkflow/main/index.html
@@ -87,6 +87,9 @@
     <a class="nav-link" href="core/working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="core/configuration-properties.html">Configuration Properties</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="core/custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
   </li>
 </ul>
@@ -323,6 +326,16 @@
 </div>
 <div class="paragraph card-description">
 <p>Working with parallelism in your Serverless Workflow service</p>
+</div>
+</div>
+</div>
+<div class="openblock card">
+<div class="content">
+<div class="paragraph card-title">
+<p><a href="core/configuration-properties.html" class="xref page">Configuration Properties</a></p>
+</div>
+<div class="paragraph card-description">
+<p>Configuration Properties</p>
 </div>
 </div>
 </div>
