--- a/serverlessworkflow/main/core/defining-an-input-schema-for-workflows.html
+++ b/serverlessworkflow/main/core/defining-an-input-schema-for-workflows.html
@@ -86,6 +86,9 @@
     <a class="nav-link" href="working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="configuration-properties.html">Configuration Properties</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
   </li>
 </ul>
