--- a/serverlessworkflow/main/tooling/quarkus-dev-ui-extension/quarkus-dev-ui-overview.html
+++ b/serverlessworkflow/main/tooling/quarkus-dev-ui-extension/quarkus-dev-ui-overview.html
@@ -88,6 +88,9 @@
     <a class="nav-link" href="../../core/working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../../core/configuration-properties.html">Configuration Properties</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../../core/custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
   </li>
 </ul>
