deploy: 67578e96b05c92bab737495b858db46aa00fce46

--- a/serverlessworkflow/main/cloud/build-workflow-image-with-quarkus-cli.html
+++ b/serverlessworkflow/main/cloud/build-workflow-image-with-quarkus-cli.html
@@ -88,7 +88,7 @@
     <a class="nav-link" href="../core/working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../core/configuration-properties.html">Configuration Properties</a>
+    <a class="nav-link" href="../core/configuration-properties.html">Configuration properties in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../core/custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
@@ -304,7 +304,7 @@
 <div class="title">Prerequisites</div>
 <ul>
 <li>
-<p>Quarkus 2.10.2.Final is installed.</p>
+<p>Quarkus 2.11.1.Final is installed.</p>
 </li>
 </ul>
 </div>
