--- a/serverlessworkflow/main/cloud/deploying-on-minikube.html
+++ b/serverlessworkflow/main/cloud/deploying-on-minikube.html
@@ -88,7 +88,7 @@
     <a class="nav-link" href="../core/working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../core/configuration-properties.html">Configuration Properties</a>
+    <a class="nav-link" href="../core/configuration-properties.html">Configuration properties in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../core/custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
@@ -758,7 +758,7 @@ http://hello.serverless-workflow-greeting-quarkus.10.103.94.37.sslip.io</code></
 <div class="tab-pane" aria-labelledby="tabset1_gradle">
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">quarkus-kubernetes 'io.quarkus:quarkus-kubernetes:2.10.2.Final'
+<pre class="highlightjs highlight"><code class="language-shell hljs" data-lang="shell">quarkus-kubernetes 'io.quarkus:quarkus-kubernetes:2.11.1.Final'
 quarkus-kubernetes 'org.kie.kogito:kogito-addons-quarkus-knative-eventing:main'</code></pre>
 </div>
 </div>
