--- a/serverlessworkflow/main/eventing/handling-events-on-workflows.html
+++ b/serverlessworkflow/main/eventing/handling-events-on-workflows.html
@@ -86,7 +86,7 @@
     <a class="nav-link" href="../core/working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../core/configuration-properties.html">Configuration Properties</a>
+    <a class="nav-link" href="../core/configuration-properties.html">Configuration properties in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../core/custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
