--- a/serverlessworkflow/main/index.html
+++ b/serverlessworkflow/main/index.html
@@ -87,7 +87,7 @@
     <a class="nav-link" href="core/working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="core/configuration-properties.html">Configuration Properties</a>
+    <a class="nav-link" href="core/configuration-properties.html">Configuration properties in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="core/custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
@@ -332,10 +332,10 @@
 <div class="openblock card">
 <div class="content">
 <div class="paragraph card-title">
-<p><a href="core/configuration-properties.html" class="xref page">Configuration Properties</a></p>
+<p><a href="core/configuration-properties.html" class="xref page">Configuration properties in Serverless Workflow</a></p>
 </div>
 <div class="paragraph card-description">
-<p>Configuration Properties</p>
+<p>Quick reference of configuration properties in Serverless Workflow</p>
 </div>
 </div>
 </div>
