--- a/serverlessworkflow/main/tooling/quarkus-dev-ui-extension/quarkus-dev-ui-overview.html
+++ b/serverlessworkflow/main/tooling/quarkus-dev-ui-extension/quarkus-dev-ui-overview.html
@@ -88,7 +88,7 @@
     <a class="nav-link" href="../../core/working-with-parallelism.html">Parallelism in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../../core/configuration-properties.html">Configuration Properties</a>
+    <a class="nav-link" href="../../core/configuration-properties.html">Configuration properties in Serverless Workflow</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../../core/custom-functions-support.html">Custom functions for your Serverless Workflow service</a>
@@ -281,7 +281,7 @@
 <div class="title">Prerequisites</div>
 <ul>
 <li>
-<p>Quarkus 2.10.2.Final is installed.</p>
+<p>Quarkus 2.11.1.Final is installed.</p>
 </li>
 <li>
 <p>Quarkus command line interface (CLI) is installed. For more information, see <a href="https://quarkus.io/guides/cli-tooling">Installing the Quarkus CLI</a>.</p>
